--- a/src/ihm/pref.fxml
+++ b/src/ihm/pref.fxml
@@ -43,7 +43,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<VBox prefHeight="400.0" prefWidth="640.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="src.ihm.prefController">
+<VBox prefHeight="400.0" prefWidth="640.0" xmlns="http://javafx.com/javafx/22" xmlns:fx="http://javafx.com/fxml/1" fx:controller="src.ihm.prefController">
   <children>
     <MenuBar VBox.vgrow="NEVER">
       <menus>
@@ -99,9 +99,9 @@
             <Label layoutX="32.0" layoutY="257.0" text="3." />
             <Label layoutX="58.0" layoutY="74.0" prefHeight="17.0" prefWidth="139.0" text="Préference Transport" />
             <Label layoutX="389.0" layoutY="75.0" prefHeight="17.0" prefWidth="139.0" text="Critère préferences" />
-            <ChoiceBox fx:id="CritFirst" layoutX="389.0" layoutY="103.0" onInputMethodTextChanged="#changeCritPref" prefWidth="150.0" />
-            <ChoiceBox fx:id="CritSecond" layoutX="389.0" layoutY="173.0" onInputMethodTextChanged="#changeCritPref" prefWidth="150.0" />
-            <ChoiceBox fx:id="CritThird" layoutX="389.0" layoutY="253.0" onInputMethodTextChanged="#changeCritPref" prefWidth="150.0" />
+            <ChoiceBox fx:id="critFirst" layoutX="389.0" layoutY="103.0" onAction="#changeCritPref" prefWidth="150.0" />
+            <ChoiceBox fx:id="critSecond" layoutX="389.0" layoutY="173.0" onAction="#changeCritPref" prefWidth="150.0" />
+            <ChoiceBox fx:id="critThird" layoutX="389.0" layoutY="253.0" onAction="#changeCritPref" prefWidth="150.0" />
             <Label layoutX="370.0" layoutY="107.0" text="1." />
             <Label layoutX="370.0" layoutY="180.0" text="2." />
             <Label layoutX="370.0" layoutY="257.0" text="3." />
