--- a/fxml/accueil.fxml
+++ b/fxml/accueil.fxml
@@ -32,19 +32,19 @@
   OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 -->
 
-<?import com.gluonhq.charm.glisten.control.AutoCompleteTextField?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.Menu?>
 <?import javafx.scene.control.MenuBar?>
 <?import javafx.scene.control.MenuItem?>
 <?import javafx.scene.control.SeparatorMenuItem?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<VBox prefHeight="400.0" prefWidth="640.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1">
+<VBox prefHeight="400.0" prefWidth="640.0" xmlns="http://javafx.com/javafx/22" xmlns:fx="http://javafx.com/fxml/1">
   <children>
     <MenuBar VBox.vgrow="NEVER">
       <menus>
@@ -80,8 +80,6 @@
                   <Font name="Cantarell Regular" size="20.0" />
                </font>
             </Label>
-            <AutoCompleteTextField layoutX="50.0" layoutY="117.0" />
-            <AutoCompleteTextField layoutX="50.0" layoutY="190.0" />
             <Button layoutX="100.0" layoutY="248.0" mnemonicParsing="false" text="On y va !">
                <font>
                   <Font name="Cantarell Regular" size="14.0" />
@@ -265,6 +263,8 @@
                   <Label alignment="CENTER" layoutX="192.0" layoutY="72.0" text="Temps" />
                </children>
             </Pane>
+            <TextField layoutX="58.0" layoutY="117.0" />
+            <TextField layoutX="60.0" layoutY="198.0" />
          </children>
     </AnchorPane>
   </children>
