--- a/src/ihm/accueil.fxml
+++ b/src/ihm/accueil.fxml
@@ -264,7 +264,7 @@
                </children>
             </Pane>
             <TextField fx:id="vDepart" layoutX="58.0" layoutY="117.0" />
-            <TextField fx:id="vArrivee" layoutX="60.0" layoutY="198.0" />
+            <TextField fx:id="vArrivee" layoutX="60.0" layoutY="198.0" onAction="#initialize" />
          </children>
     </AnchorPane>
   </children>
