--- a/src/ihm/accueil.fxml
+++ b/src/ihm/accueil.fxml
@@ -39,12 +39,14 @@
 <?import javafx.scene.control.MenuItem?>
 <?import javafx.scene.control.SeparatorMenuItem?>
 <?import javafx.scene.control.TextField?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<VBox prefHeight="400.0" prefWidth="640.0" xmlns="http://javafx.com/javafx/22" xmlns:fx="http://javafx.com/fxml/1" fx:controller="src.ihm.Search">
+<VBox prefHeight="670.0" prefWidth="971.0" xmlns="http://javafx.com/javafx/22" xmlns:fx="http://javafx.com/fxml/1" fx:controller="src.ihm.Search">
   <children>
     <MenuBar VBox.vgrow="NEVER">
       <menus>
@@ -63,169 +65,213 @@
         </Menu>
       </menus>
     </MenuBar>
-    <AnchorPane maxHeight="-1.0" maxWidth="-1.0" prefHeight="-1.0" prefWidth="-1.0" VBox.vgrow="ALWAYS">
+    <AnchorPane maxHeight="-1.0" maxWidth="-1.0" prefHeight="397.0" prefWidth="697.0" VBox.vgrow="ALWAYS">
          <children>
-            <Label layoutX="400.0" layoutY="29.0" text="Résultats">
+            <Label layoutX="584.0" layoutY="28.0" prefHeight="57.0" prefWidth="143.0" text="Résultats">
+               <font>
+                  <Font size="32.0" />
+               </font>
+            </Label>
+            <Label alignment="CENTER" layoutX="116.0" layoutY="197.0" prefHeight="27.0" prefWidth="171.0" text="Ville de départ" textAlignment="CENTER">
                <font>
                   <Font name="Cantarell Regular" size="20.0" />
                </font>
             </Label>
-            <Label alignment="CENTER" layoutX="50.0" layoutY="81.0" prefHeight="27.0" prefWidth="171.0" text="Ville de départ" textAlignment="CENTER">
+            <Label alignment="CENTER" layoutX="114.0" layoutY="298.0" prefHeight="27.0" prefWidth="171.0" text="Ville d'arrivée">
                <font>
                   <Font name="Cantarell Regular" size="20.0" />
                </font>
             </Label>
-            <Label alignment="CENTER" layoutX="50.0" layoutY="156.0" prefHeight="27.0" prefWidth="171.0" text="Ville d'arrivée">
-               <font>
-                  <Font name="Cantarell Regular" size="20.0" />
-               </font>
-            </Label>
-            <Button fx:id="recherche" layoutX="100.0" layoutY="248.0" mnemonicParsing="false" onAction="#search" text="On y va !">
+            <Button fx:id="recherche" layoutX="164.0" layoutY="390.0" mnemonicParsing="false" onAction="#search" text="On y va !">
                <font>
                   <Font name="Cantarell Regular" size="14.0" />
                </font>
             </Button>
-            <Label fx:id="noResultLabel" layoutX="323.0" layoutY="170.0" text="Faites une recherche pour avoir des résultats">
+            <Label fx:id="noResultLabel" layoutX="486.0" layoutY="274.0" text="Faites une recherche pour avoir des résultats">
                <font>
-                  <Font name="Cantarell Regular" size="12.0" />
+                  <Font size="16.0" />
                </font>
             </Label>
-            <Pane fx:id="resultContainer" layoutX="321.0" layoutY="184.0" prefHeight="154.0" prefWidth="258.0">
+            <Pane fx:id="resultContainer" layoutX="415.0" layoutY="320.0" prefHeight="271.0" prefWidth="481.0" style="-fx-border-color: black; -fx-border-radius: 2px;">
                <children>
-                  <Label fx:id="t1CO2" layoutX="46.0" layoutY="49.0" text="XX,X">
+                  <Label fx:id="t1CO2" layoutX="95.0" layoutY="67.0" text="XX,X">
                      <font>
-                        <Font name="Cantarell Regular" size="9.0" />
+                        <Font size="14.0" />
                      </font>
                   </Label>
-                  <Label layoutY="14.0" text="Autres trajets" />
-                  <Label layoutY="49.0" text="Pollution : ">
+                  <Label layoutX="16.0" layoutY="5.0" text="Autres trajets">
                      <font>
-                        <Font name="Cantarell Regular" size="9.0" />
+                        <Font size="18.0" />
+                     </font></Label>
+                  <Label layoutX="24.0" layoutY="67.0" text="Pollution : ">
+                     <font>
+                        <Font size="14.0" />
                      </font>
                   </Label>
-                  <Label layoutX="109.0" layoutY="49.0" text="Prix :">
+                  <Label layoutX="183.0" layoutY="67.0" text="Prix :">
                      <font>
-                        <Font name="Cantarell Regular" size="9.0" />
+                        <Font size="14.0" />
                      </font>
                   </Label>
-                  <Label fx:id="t1PRIX" layoutX="130.0" layoutY="49.0" prefHeight="13.0" prefWidth="36.0" text="XX">
+                  <Label fx:id="t1PRIX" layoutX="221.0" layoutY="67.0" prefHeight="20.0" prefWidth="62.0" text="XX">
                      <font>
-                        <Font name="Cantarell Regular" size="9.0" />
+                        <Font size="14.0" />
                      </font>
                   </Label>
-                  <Label layoutX="181.0" layoutY="48.0" text="Temps :">
+                  <Label layoutX="286.0" layoutY="69.0" text="Temps :">
                      <font>
-                        <Font name="Cantarell Regular" size="9.0" />
+                        <Font size="14.0" />
                      </font>
                   </Label>
-                  <Label fx:id="t1TEMPS" layoutX="214.0" layoutY="49.0" prefHeight="13.0" prefWidth="36.0" text="XX">
+                  <Label fx:id="t1TEMPS" layoutX="353.0" layoutY="69.0" prefHeight="20.0" prefWidth="62.0" text="XX">
                      <font>
-                        <Font name="Cantarell Regular" size="9.0" />
+                        <Font size="14.0" />
                      </font>
                   </Label>
-                  <Label fx:id="t2CO2" layoutX="45.0" layoutY="68.0" text="XX,X">
+                  <Label fx:id="t2CO2" layoutX="95.0" layoutY="117.0" text="XX,X">
                      <font>
-                        <Font name="Cantarell Regular" size="9.0" />
+                        <Font size="14.0" />
                      </font>
                   </Label>
-                  <Label layoutX="-1.0" layoutY="68.0" text="Pollution : ">
+                  <Label layoutX="24.0" layoutY="117.0" text="Pollution : ">
                      <font>
-                        <Font name="Cantarell Regular" size="9.0" />
+                        <Font size="14.0" />
                      </font>
                   </Label>
-                  <Label layoutX="108.0" layoutY="68.0" text="Prix :">
+                  <Label layoutX="183.0" layoutY="117.0" text="Prix :">
                      <font>
-                        <Font name="Cantarell Regular" size="9.0" />
+                        <Font size="14.0" />
                      </font>
                   </Label>
-                  <Label fx:id="t2PRIX" layoutX="129.0" layoutY="68.0" prefHeight="13.0" prefWidth="36.0" text="XX">
+                  <Label fx:id="t2PRIX" layoutX="221.0" layoutY="115.0" prefHeight="20.0" prefWidth="62.0" text="XX">
                      <font>
-                        <Font name="Cantarell Regular" size="9.0" />
+                        <Font size="14.0" />
                      </font>
                   </Label>
-                  <Label layoutX="180.0" layoutY="67.0" text="Temps :">
+                  <Label layoutX="286.0" layoutY="117.0" text="Temps :">
                      <font>
-                        <Font name="Cantarell Regular" size="9.0" />
+                        <Font size="14.0" />
                      </font>
                   </Label>
-                  <Label fx:id="t2TEMPS" layoutX="213.0" layoutY="68.0" prefHeight="13.0" prefWidth="36.0" text="XX">
+                  <Label fx:id="t2TEMPS" layoutX="353.0" layoutY="117.0" prefHeight="20.0" prefWidth="62.0" text="XX">
                      <font>
-                        <Font name="Cantarell Regular" size="9.0" />
+                        <Font size="14.0" />
                      </font>
                   </Label>
-                  <Label fx:id="t3CO2" layoutX="46.0" layoutY="87.0" text="XX,X">
+                  <Label fx:id="t3CO2" layoutX="95.0" layoutY="163.0" text="XX,X">
                      <font>
-                        <Font name="Cantarell Regular" size="9.0" />
+                        <Font size="14.0" />
                      </font>
                   </Label>
-                  <Label layoutY="87.0" text="Pollution : ">
+                  <Label layoutX="24.0" layoutY="162.0" text="Pollution : ">
                      <font>
-                        <Font name="Cantarell Regular" size="9.0" />
+                        <Font size="14.0" />
                      </font>
                   </Label>
-                  <Label layoutX="109.0" layoutY="87.0" text="Prix :">
+                  <Label layoutX="183.0" layoutY="162.0" text="Prix :">
                      <font>
-                        <Font name="Cantarell Regular" size="9.0" />
+                        <Font size="14.0" />
                      </font>
                   </Label>
-                  <Label fx:id="t3PRIX" layoutX="130.0" layoutY="87.0" prefHeight="13.0" prefWidth="36.0" text="XX">
+                  <Label fx:id="t3PRIX" layoutX="221.0" layoutY="163.0" prefHeight="20.0" prefWidth="62.0" text="XX">
                      <font>
-                        <Font name="Cantarell Regular" size="9.0" />
+                        <Font size="14.0" />
                      </font>
                   </Label>
-                  <Label layoutX="181.0" layoutY="86.0" text="Temps :">
+                  <Label layoutX="286.0" layoutY="163.0" text="Temps :">
                      <font>
-                        <Font name="Cantarell Regular" size="9.0" />
+                        <Font size="14.0" />
                      </font>
                   </Label>
-                  <Label fx:id="t3TEMPS" layoutX="214.0" layoutY="87.0" prefHeight="13.0" prefWidth="36.0" text="XX">
+                  <Label fx:id="t3TEMPS" layoutX="353.0" layoutY="162.0" prefHeight="20.0" prefWidth="62.0" text="XX">
                      <font>
-                        <Font name="Cantarell Regular" size="9.0" />
+                        <Font size="14.0" />
                      </font>
                   </Label>
-                  <Label fx:id="t4CO2" layoutX="46.0" layoutY="107.0" text="XX,X">
+                  <Label fx:id="t4CO2" layoutX="95.0" layoutY="205.0" text="XX,X">
                      <font>
-                        <Font name="Cantarell Regular" size="9.0" />
+                        <Font size="14.0" />
                      </font>
                   </Label>
-                  <Label layoutY="107.0" text="Pollution : ">
+                  <Label layoutX="24.0" layoutY="205.0" text="Pollution : ">
                      <font>
-                        <Font name="Cantarell Regular" size="9.0" />
+                        <Font size="14.0" />
                      </font>
                   </Label>
-                  <Label layoutX="109.0" layoutY="107.0" text="Prix :">
+                  <Label layoutX="183.0" layoutY="205.0" prefHeight="20.0" prefWidth="33.0" text="Prix :">
                      <font>
-                        <Font name="Cantarell Regular" size="9.0" />
+                        <Font size="14.0" />
                      </font>
                   </Label>
-                  <Label fx:id="t4PRIX" layoutX="130.0" layoutY="107.0" prefHeight="13.0" prefWidth="42.0" text="XX">
+                  <Label fx:id="t4PRIX" layoutX="221.0" layoutY="205.0" prefHeight="20.0" prefWidth="62.0" text="XX">
                      <font>
-                        <Font name="Cantarell Regular" size="9.0" />
+                        <Font size="14.0" />
                      </font>
                   </Label>
-                  <Label layoutX="181.0" layoutY="106.0" text="Temps :">
+                  <Label layoutX="286.0" layoutY="205.0" text="Temps :">
                      <font>
-                        <Font name="Cantarell Regular" size="9.0" />
+                        <Font size="14.0" />
                      </font>
                   </Label>
-                  <Label fx:id="t4TEMPS" layoutX="214.0" layoutY="107.0" prefHeight="13.0" prefWidth="36.0" text="XX">
+                  <Label fx:id="t4TEMPS" layoutX="353.0" layoutY="205.0" prefHeight="20.0" prefWidth="62.0" text="XX">
                      <font>
-                        <Font name="Cantarell Regular" size="9.0" />
+                        <Font size="14.0" />
                      </font>
                   </Label>
+                  <Button layoutX="415.0" layoutY="64.0" mnemonicParsing="false" prefHeight="15.0" prefWidth="16.0" text="➔">
+                     <font>
+                        <Font size="14.0" />
+                     </font>
+                  </Button>
+                  <Button layoutX="415.0" layoutY="200.0" mnemonicParsing="false" prefHeight="15.0" prefWidth="16.0" text="➔">
+                     <font>
+                        <Font size="14.0" />
+                     </font>
+                  </Button>
+                  <Button layoutX="415.0" layoutY="158.0" mnemonicParsing="false" prefHeight="15.0" prefWidth="16.0" text="➔">
+                     <font>
+                        <Font size="14.0" />
+                     </font>
+                  </Button>
+                  <Button layoutX="415.0" layoutY="110.0" mnemonicParsing="false" prefHeight="15.0" prefWidth="16.0" text="➔">
+                     <font>
+                        <Font size="14.0" />
+                     </font>
+                  </Button>
                </children>
             </Pane>
-            <Pane fx:id="recomendedPath" layoutX="322.0" layoutY="70.0" prefHeight="93.0" prefWidth="239.0">
+            <Pane fx:id="recomendedPath" layoutX="415.0" layoutY="106.0" prefHeight="153.0" prefWidth="481.0" style="-fx-border-color: black; -fx-border-radius: 2px;">
                <children>
-                  <Label text="Trajets recommandés" />
-                  <Label fx:id="PollutionReco" layoutY="72.0" text="Pollution" />
-                  <Label fx:id="PrixReco" alignment="CENTER" layoutX="107.0" layoutY="72.0" text="Prix" />
-                  <Label fx:id="TempsReco" alignment="CENTER" layoutX="192.0" layoutY="72.0" text="Temps" />
-                  <Label fx:id="cheminRecoLabel" alignment="CENTER" layoutX="-1.0" layoutY="38.0" prefHeight="18.0" prefWidth="240.0" text="Label" />
+                  <Label layoutX="39.0" layoutY="4.0" text="Trajets recommandés">
+                     <font>
+                        <Font size="16.0" />
+                     </font></Label>
+                  <Label fx:id="PollutionReco" layoutX="39.0" layoutY="103.0" text="Pollution">
+                     <font>
+                        <Font size="18.0" />
+                     </font></Label>
+                  <Label fx:id="PrixReco" alignment="CENTER" layoutX="227.0" layoutY="103.0" text="Prix">
+                     <font>
+                        <Font size="18.0" />
+                     </font></Label>
+                  <Label fx:id="TempsReco" alignment="CENTER" layoutX="377.0" layoutY="103.0" text="Temps">
+                     <font>
+                        <Font size="18.0" />
+                     </font></Label>
+                  <Label fx:id="cheminRecoLabel" alignment="CENTER" layoutX="-2.0" layoutY="59.0" prefHeight="18.0" prefWidth="481.0" text="Label">
+                     <font>
+                        <Font size="10.0" />
+                     </font></Label>
+                  <ImageView fitHeight="18.0" fitWidth="20.0" layoutX="10.0" layoutY="6.0" pickOnBounds="true" preserveRatio="true">
+                     <image>
+                        <Image url="@../../img/favorite.png" />
+                     </image>
+                  </ImageView>
+                  <Button layoutX="436.0" layoutY="17.0" mnemonicParsing="false" prefHeight="30.0" prefWidth="33.0" text="➔" />
                </children>
             </Pane>
-            <TextField fx:id="vDepart" layoutX="58.0" layoutY="117.0" />
-            <TextField fx:id="vArrivee" layoutX="60.0" layoutY="198.0" />
+            <TextField fx:id="vDepart" layoutX="124.0" layoutY="233.0" />
+            <TextField fx:id="vArrivee" layoutX="124.0" layoutY="340.0" />
          </children>
     </AnchorPane>
   </children>
