--- a/src/ihm/accueil.fxml
+++ b/src/ihm/accueil.fxml
@@ -272,6 +272,7 @@
             </Pane>
             <TextField fx:id="vDepart" layoutX="124.0" layoutY="233.0" />
             <TextField fx:id="vArrivee" layoutX="124.0" layoutY="340.0" />
+            <Button fx:id="openFilterBtn" layoutX="415.0" layoutY="57.0" mnemonicParsing="false" onAction="#openFilter" text="Filtrer" />
          </children>
     </AnchorPane>
   </children>
