--- a/src/ihm/accueil.fxml
+++ b/src/ihm/accueil.fxml
@@ -272,7 +272,8 @@
             </Pane>
             <TextField fx:id="vDepart" layoutX="124.0" layoutY="233.0" />
             <TextField fx:id="vArrivee" layoutX="124.0" layoutY="340.0" />
-            <Button fx:id="openFilterBtn" layoutX="415.0" layoutY="57.0" mnemonicParsing="false" onAction="#openFilter" text="Filtrer" />
+            <Button fx:id="openPrefBtn" layoutX="29.0" layoutY="28.0" mnemonicParsing="false" onAction="#openPref" text="Préférence" />
+            <Button fx:id="OpenFilterBtn" layoutX="415.0" layoutY="57.0" mnemonicParsing="false" text="Filtrer" />
          </children>
     </AnchorPane>
   </children>
