--- a/src/ihm/accueil.fxml
+++ b/src/ihm/accueil.fxml
@@ -67,123 +67,124 @@
     </MenuBar>
     <AnchorPane maxHeight="-1.0" maxWidth="-1.0" prefHeight="397.0" prefWidth="697.0" VBox.vgrow="ALWAYS">
          <children>
-            <Label layoutX="584.0" layoutY="28.0" prefHeight="57.0" prefWidth="143.0" text="Résultats">
+            <VBox layoutX="-49.0" prefHeight="650.0" prefWidth="459.0" style="-fx-background-color: #E7E7E7;" />
+            <Label layoutX="617.0" layoutY="17.0" prefHeight="57.0" prefWidth="143.0" text="Résultats">
                <font>
-                  <Font size="32.0" />
+                  <Font name="System Bold" size="32.0" />
                </font>
             </Label>
-            <Label alignment="CENTER" layoutX="116.0" layoutY="197.0" prefHeight="27.0" prefWidth="171.0" text="Ville de départ" textAlignment="CENTER">
-               <font>
-                  <Font name="Cantarell Regular" size="20.0" />
-               </font>
-            </Label>
-            <Label alignment="CENTER" layoutX="114.0" layoutY="298.0" prefHeight="27.0" prefWidth="171.0" text="Ville d'arrivée">
+            <Label alignment="CENTER" layoutX="112.0" layoutY="197.0" prefHeight="27.0" prefWidth="171.0" text="Ville de départ" textAlignment="CENTER">
                <font>
                   <Font name="Cantarell Regular" size="20.0" />
                </font>
             </Label>
-            <Button fx:id="recherche" layoutX="164.0" layoutY="390.0" mnemonicParsing="false" onAction="#search" text="On y va !">
+            <Label alignment="CENTER" layoutX="109.0" layoutY="298.0" prefHeight="27.0" prefWidth="171.0" text="Ville d'arrivée">
+               <font>
+                  <Font name="Cantarell Regular" size="20.0" />
+               </font>
+            </Label>
+            <Button fx:id="recherche" layoutX="160.0" layoutY="405.0" mnemonicParsing="false" onAction="#search" style="-fx-background-color: #282828;" text="On y va !" textFill="WHITE">
                <font>
                   <Font name="Cantarell Regular" size="14.0" />
                </font>
             </Button>
-            <Label fx:id="noResultLabel" layoutX="486.0" layoutY="274.0" text="Faites une recherche pour avoir des résultats">
+            <Label fx:id="noResultLabel" layoutX="520.0" layoutY="290.0" text="Faites une recherche pour avoir des résultats">
                <font>
                   <Font size="16.0" />
                </font>
             </Label>
-            <Pane fx:id="resultContainer" layoutX="415.0" layoutY="320.0" prefHeight="271.0" prefWidth="481.0" style="-fx-border-color: black; -fx-border-radius: 2px;">
+            <Pane fx:id="resultContainer" layoutX="449.0" layoutY="336.0" prefHeight="257.0" prefWidth="482.0" style="-fx-border-color: #282828; -fx-border-radius: 10px;">
                <children>
-                  <Label fx:id="t1CO2" layoutX="95.0" layoutY="67.0" text="XX,X">
+                  <Label fx:id="t1CO2" layoutX="95.0" layoutY="56.0" text="XX,X">
                      <font>
                         <Font size="14.0" />
                      </font>
                   </Label>
-                  <Label layoutX="16.0" layoutY="5.0" text="Autres trajets">
+                  <Label layoutX="14.0" layoutY="8.0" text="Autres trajets">
                      <font>
-                        <Font size="18.0" />
+                        <Font name="System Bold" size="16.0" />
                      </font></Label>
-                  <Label layoutX="24.0" layoutY="67.0" text="Pollution : ">
+                  <Label layoutX="24.0" layoutY="56.0" text="Pollution : ">
                      <font>
                         <Font size="14.0" />
                      </font>
                   </Label>
-                  <Label layoutX="183.0" layoutY="67.0" text="Prix :">
+                  <Label layoutX="183.0" layoutY="56.0" text="Prix :">
                      <font>
                         <Font size="14.0" />
                      </font>
                   </Label>
-                  <Label fx:id="t1PRIX" layoutX="221.0" layoutY="67.0" prefHeight="20.0" prefWidth="62.0" text="XX">
+                  <Label fx:id="t1PRIX" layoutX="221.0" layoutY="56.0" prefHeight="20.0" prefWidth="62.0" text="XX">
                      <font>
                         <Font size="14.0" />
                      </font>
                   </Label>
-                  <Label layoutX="286.0" layoutY="69.0" text="Temps :">
+                  <Label layoutX="286.0" layoutY="58.0" text="Temps :">
                      <font>
                         <Font size="14.0" />
                      </font>
                   </Label>
-                  <Label fx:id="t1TEMPS" layoutX="353.0" layoutY="69.0" prefHeight="20.0" prefWidth="62.0" text="XX">
+                  <Label fx:id="t1TEMPS" layoutX="353.0" layoutY="58.0" prefHeight="20.0" prefWidth="62.0" text="XX">
                      <font>
                         <Font size="14.0" />
                      </font>
                   </Label>
-                  <Label fx:id="t2CO2" layoutX="95.0" layoutY="117.0" text="XX,X">
+                  <Label fx:id="t2CO2" layoutX="95.0" layoutY="106.0" text="XX,X">
                      <font>
                         <Font size="14.0" />
                      </font>
                   </Label>
-                  <Label layoutX="24.0" layoutY="117.0" text="Pollution : ">
+                  <Label layoutX="24.0" layoutY="106.0" text="Pollution : ">
                      <font>
                         <Font size="14.0" />
                      </font>
                   </Label>
-                  <Label layoutX="183.0" layoutY="117.0" text="Prix :">
+                  <Label layoutX="183.0" layoutY="106.0" text="Prix :">
                      <font>
                         <Font size="14.0" />
                      </font>
                   </Label>
-                  <Label fx:id="t2PRIX" layoutX="221.0" layoutY="115.0" prefHeight="20.0" prefWidth="62.0" text="XX">
+                  <Label fx:id="t2PRIX" layoutX="221.0" layoutY="104.0" prefHeight="20.0" prefWidth="62.0" text="XX">
                      <font>
                         <Font size="14.0" />
                      </font>
                   </Label>
-                  <Label layoutX="286.0" layoutY="117.0" text="Temps :">
+                  <Label layoutX="286.0" layoutY="106.0" text="Temps :">
                      <font>
                         <Font size="14.0" />
                      </font>
                   </Label>
-                  <Label fx:id="t2TEMPS" layoutX="353.0" layoutY="117.0" prefHeight="20.0" prefWidth="62.0" text="XX">
+                  <Label fx:id="t2TEMPS" layoutX="353.0" layoutY="106.0" prefHeight="20.0" prefWidth="62.0" text="XX">
                      <font>
                         <Font size="14.0" />
                      </font>
                   </Label>
-                  <Label fx:id="t3CO2" layoutX="95.0" layoutY="163.0" text="XX,X">
+                  <Label fx:id="t3CO2" layoutX="95.0" layoutY="157.0" text="XX,X">
                      <font>
                         <Font size="14.0" />
                      </font>
                   </Label>
-                  <Label layoutX="24.0" layoutY="162.0" text="Pollution : ">
+                  <Label layoutX="24.0" layoutY="156.0" text="Pollution : ">
                      <font>
                         <Font size="14.0" />
                      </font>
                   </Label>
-                  <Label layoutX="183.0" layoutY="162.0" text="Prix :">
+                  <Label layoutX="183.0" layoutY="156.0" text="Prix :">
                      <font>
                         <Font size="14.0" />
                      </font>
                   </Label>
-                  <Label fx:id="t3PRIX" layoutX="221.0" layoutY="163.0" prefHeight="20.0" prefWidth="62.0" text="XX">
+                  <Label fx:id="t3PRIX" layoutX="221.0" layoutY="157.0" prefHeight="20.0" prefWidth="62.0" text="XX">
                      <font>
                         <Font size="14.0" />
                      </font>
                   </Label>
-                  <Label layoutX="286.0" layoutY="163.0" text="Temps :">
+                  <Label layoutX="286.0" layoutY="157.0" text="Temps :">
                      <font>
                         <Font size="14.0" />
                      </font>
                   </Label>
-                  <Label fx:id="t3TEMPS" layoutX="353.0" layoutY="162.0" prefHeight="20.0" prefWidth="62.0" text="XX">
+                  <Label fx:id="t3TEMPS" layoutX="353.0" layoutY="156.0" prefHeight="20.0" prefWidth="62.0" text="XX">
                      <font>
                         <Font size="14.0" />
                      </font>
@@ -218,7 +219,7 @@
                         <Font size="14.0" />
                      </font>
                   </Label>
-                  <Button layoutX="415.0" layoutY="64.0" mnemonicParsing="false" prefHeight="15.0" prefWidth="16.0" text="➔">
+                  <Button layoutX="415.0" layoutY="53.0" mnemonicParsing="false" prefHeight="15.0" prefWidth="16.0" text="➔">
                      <font>
                         <Font size="14.0" />
                      </font>
@@ -228,33 +229,33 @@
                         <Font size="14.0" />
                      </font>
                   </Button>
-                  <Button layoutX="415.0" layoutY="158.0" mnemonicParsing="false" prefHeight="15.0" prefWidth="16.0" text="➔">
+                  <Button layoutX="415.0" layoutY="152.0" mnemonicParsing="false" prefHeight="15.0" prefWidth="16.0" text="➔">
                      <font>
                         <Font size="14.0" />
                      </font>
                   </Button>
-                  <Button layoutX="415.0" layoutY="110.0" mnemonicParsing="false" prefHeight="15.0" prefWidth="16.0" text="➔">
+                  <Button layoutX="415.0" layoutY="99.0" mnemonicParsing="false" prefHeight="15.0" prefWidth="16.0" text="➔">
                      <font>
                         <Font size="14.0" />
                      </font>
                   </Button>
                </children>
             </Pane>
-            <Pane fx:id="recomendedPath" layoutX="415.0" layoutY="106.0" prefHeight="153.0" prefWidth="481.0" style="-fx-border-color: black; -fx-border-radius: 2px;">
+            <Pane fx:id="recomendedPath" layoutX="449.0" layoutY="122.0" prefHeight="153.0" prefWidth="481.0" style="-fx-border-color: #282828; -fx-border-radius: 10px;">
                <children>
-                  <Label layoutX="39.0" layoutY="4.0" text="Trajets recommandés">
+                  <Label layoutX="35.0" layoutY="4.0" text="Trajets recommandés">
                      <font>
-                        <Font size="16.0" />
+                        <Font name="System Bold" size="16.0" />
                      </font></Label>
-                  <Label fx:id="PollutionReco" layoutX="39.0" layoutY="103.0" text="Pollution">
-                     <font>
-                        <Font size="18.0" />
-                     </font></Label>
-                  <Label fx:id="PrixReco" alignment="CENTER" layoutX="227.0" layoutY="103.0" text="Prix">
+                  <Label fx:id="PollutionReco" layoutX="59.0" layoutY="103.0" text="Pollution">
                      <font>
                         <Font size="18.0" />
                      </font></Label>
-                  <Label fx:id="TempsReco" alignment="CENTER" layoutX="377.0" layoutY="103.0" text="Temps">
+                  <Label fx:id="PrixReco" alignment="CENTER" layoutX="244.0" layoutY="103.0" text="Prix">
+                     <font>
+                        <Font size="18.0" />
+                     </font></Label>
+                  <Label fx:id="TempsReco" alignment="CENTER" layoutX="394.0" layoutY="103.0" text="Temps">
                      <font>
                         <Font size="18.0" />
                      </font></Label>
@@ -268,12 +269,27 @@
                      </image>
                   </ImageView>
                   <Button layoutX="436.0" layoutY="17.0" mnemonicParsing="false" prefHeight="30.0" prefWidth="33.0" text="➔" />
+                  <ImageView fitHeight="25.0" fitWidth="28.0" layoutX="211.0" layoutY="105.0" pickOnBounds="true" preserveRatio="true">
+                     <image>
+                        <Image url="@../../img/billet.png" />
+                     </image>
+                  </ImageView>
+                  <ImageView fitHeight="25.0" fitWidth="28.0" layoutX="359.0" layoutY="104.0" pickOnBounds="true" preserveRatio="true">
+                     <image>
+                        <Image url="@../../img/horloge.png" />
+                     </image>
+                  </ImageView>
+                  <ImageView fitHeight="27.0" fitWidth="29.0" layoutX="26.0" layoutY="103.0" pickOnBounds="true" preserveRatio="true">
+                     <image>
+                        <Image url="@../../img/pollution.png" />
+                     </image>
+                  </ImageView>
                </children>
             </Pane>
-            <TextField fx:id="vDepart" layoutX="124.0" layoutY="233.0" />
-            <TextField fx:id="vArrivee" layoutX="124.0" layoutY="340.0" />
-            <Button fx:id="openPrefBtn" layoutX="29.0" layoutY="28.0" mnemonicParsing="false" onAction="#openPref" text="Préférence" />
-            <Button fx:id="OpenFilterBtn" layoutX="415.0" layoutY="57.0" mnemonicParsing="false" text="Filtrer" />
+            <TextField fx:id="vDepart" layoutX="124.0" layoutY="233.0" style="-fx-border-color: #282828; -fx-border-radius: 5;" />
+            <TextField fx:id="vArrivee" layoutX="124.0" layoutY="340.0" style="-fx-border-color: #282828; -fx-border-radius: 5;" />
+            <Button fx:id="openPrefBtn" layoutX="29.0" layoutY="28.0" mnemonicParsing="false" onAction="#openPref" style="-fx-background-color: #282828;" text="Préférence" textFill="WHITE" />
+            <Button fx:id="OpenFilterBtn" layoutX="453.0" layoutY="78.0" mnemonicParsing="false" style="-fx-background-color: #282828;" text="Filtrer" textFill="WHITE" />
          </children>
     </AnchorPane>
   </children>
