--- a/src/ihm/accueil.fxml
+++ b/src/ihm/accueil.fxml
@@ -225,22 +225,22 @@
                         <Font size="14.0" />
                      </font>
                   </Label>
-                  <Button fx:id="addBtn2" layoutX="415.0" layoutY="53.0" mnemonicParsing="false" onAction="#addToHistorique" prefHeight="15.0" prefWidth="16.0" text="➔">
+                  <Button fx:id="addBtn2" layoutX="415.0" layoutY="53.0" mnemonicParsing="false" onAction="#addToHistorique" prefHeight="15.0" prefWidth="16.0" style="-fx-background-color: #282828;" text="+" textFill="WHITE">
                      <font>
                         <Font size="14.0" />
                      </font>
                   </Button>
-                  <Button fx:id="addBtn5" layoutX="415.0" layoutY="200.0" mnemonicParsing="false" onAction="#addToHistorique" prefHeight="15.0" prefWidth="16.0" text="➔">
+                  <Button fx:id="addBtn5" layoutX="415.0" layoutY="200.0" mnemonicParsing="false" onAction="#addToHistorique" prefHeight="15.0" prefWidth="16.0" style="-fx-background-color: #282828;" text="+" textFill="WHITE">
                      <font>
                         <Font size="14.0" />
                      </font>
                   </Button>
-                  <Button fx:id="addBtn4" layoutX="415.0" layoutY="152.0" mnemonicParsing="false" onAction="#addToHistorique" prefHeight="15.0" prefWidth="16.0" text="➔">
+                  <Button fx:id="addBtn4" layoutX="415.0" layoutY="152.0" mnemonicParsing="false" onAction="#addToHistorique" prefHeight="15.0" prefWidth="16.0" style="-fx-background-color: #282828;" text="+" textFill="WHITE">
                      <font>
                         <Font size="14.0" />
                      </font>
                   </Button>
-                  <Button fx:id="addBtn3" layoutX="415.0" layoutY="99.0" mnemonicParsing="false" onAction="#addToHistorique" prefHeight="15.0" prefWidth="16.0" text="➔">
+                  <Button fx:id="addBtn3" layoutX="415.0" layoutY="102.0" mnemonicParsing="false" onAction="#addToHistorique" prefHeight="15.0" prefWidth="16.0" style="-fx-background-color: #282828;" text="+" textFill="WHITE">
                      <font>
                         <Font size="14.0" />
                      </font>
@@ -274,7 +274,6 @@
                         <Image url="@../../img/favorite.png" />
                      </image>
                   </ImageView>
-                  <Button fx:id="addBtn1" layoutX="436.0" layoutY="17.0" mnemonicParsing="false" onAction="#addToHistorique" prefHeight="30.0" prefWidth="33.0" text="➔" />
                   <ImageView fitHeight="25.0" fitWidth="28.0" layoutX="211.0" layoutY="105.0" pickOnBounds="true" preserveRatio="true">
                      <image>
                         <Image url="@../../img/billet.png" />
@@ -290,6 +289,11 @@
                         <Image url="@../../img/pollution.png" />
                      </image>
                   </ImageView>
+                  <Button fx:id="addBtn1" layoutX="432.0" layoutY="14.0" mnemonicParsing="false" onAction="#addToHistorique" prefHeight="15.0" prefWidth="16.0" style="-fx-background-color: #282828;" text="+" textFill="WHITE">
+                     <font>
+                        <Font size="14.0" />
+                     </font>
+                  </Button>
                </children>
             </Pane>
             <TextField fx:id="vDepart" layoutX="124.0" layoutY="233.0" style="-fx-border-color: #282828; -fx-border-radius: 5;" />
